chunk is being sent and received, but there's a checksum mismatch